--- a/seckill/src/main/webapp/WEB-INF/web.xml
+++ b/seckill/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,26 @@
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1"
          metadata-complete="true">
-      <!--  修改Servlet版本为3.1-->
+    <!--  修改Servlet版本为3.1-->
+
+    !--配置DispatcherServlet-->
+    <servlet>
+        <servlet-name>seckill-dispatcher</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <!--
+            配置SpringMVC 需要配置的文件
+            spring-dao.xml，spring-service.xml,spring-web.xml
+            整合顺序 Mybites -> spring -> springMvc  spring和springMVC不需要整合，两者都出自spring
+        -->
+        <init-param>
+            <param-name>contextConfigLocation</param-name>    <!-- config配置文件的location -->
+            <param-value>classpath:spring/spring-*.xml</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>seckill-dispatcher</servlet-name>
+        <!-- 默认匹配所有的请求 -->
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
 
 </web-app>
