--- a/seckill/src/main/resources/jdbc.properties
+++ b/seckill/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/seckill?useUnicode=true&characterEncoding=utf-8
-username=root
-password=123456
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/seckill?useUnicode=true&characterEncoding=utf-8
+jdbc.username=root
+jdbc.password=123456
